--- a/package.json
+++ b/package.json
@@ -1,51 +1,34 @@
 {
-  "name": "starter_kit",
+  "name": "marketplace3",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "fs": "*",
+    "path-browserify": "^1.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.7"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "ipfs-http-client": "^59.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hooks-global-state": "^1.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.7.1"
-  },
-  "devDependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
-    "@tailwindcss/forms": "0.4.0",
-    "@truffle/hdwallet-provider": "^2.0.4",
-    "assert": "^2.0.0",
-    "autoprefixer": "10.4.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "buffer": "^6.0.3",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "crypto-browserify": "^3.12.0",
-    "dotenv": "^16.0.0",
-    "https-browserify": "^1.0.0",
-    "mnemonics": "^1.1.3",
-    "os-browserify": "^0.3.0",
-    "postcss": "8.4.5",
-    "process": "^0.11.10",
-    "react-app-rewired": "^2.1.11",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tailwindcss": "3.0.18",
-    "url": "^0.11.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -58,5 +41,27 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.7",
+    "buffer": "^5.7.1",
+    "chai": "^4.3.6",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.7",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "postcss": "^8.4.14",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.0.24",
+    "url": "^0.11.0"
   }
 }
